--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express": "^4.18.1",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.23.0"
+    "sequelize": "^6.23.0",
+    "tiny-csrf": "^1.1.3"
   },
   "devDependencies": {
     "cheerio": "^1.0.0-rc.12",
